DTO missing trainer service